Lock vision-safe Vector SIMD policy and publish --vector 0/1 bake-off.